<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_submit_amount">Enter Amount</string>
    <string name="amount">Amount</string>
    <string name="anupam">Anupam</string>
    <string name="anurag">Anurag</string>
    <string name="arpana">Arpana</string>
    <string name="expense">Expense description</string>

    <string-array name="spender_list">
        <item>Spend By</item>
        <item>Anupam</item>
        <item>Anurag</item>
        <item>Arpana</item>
        <item>Tauseef</item>
        <item>Swapnil</item>
    </string-array>

</resources>